WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
257971
REGRESSION: YouTube resumes Playing during Paused Video when attempting to Select Text
https://bugs.webkit.org/show_bug.cgi?id=257971
Summary
REGRESSION: YouTube resumes Playing during Paused Video when attempting to Se...
Richard Robinson
Reported
2023-06-12 11:47:40 PDT
rdar://104320780
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-06-12 11:54:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14809
Richard Robinson
Comment 2
2023-06-12 12:00:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14877
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug